--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  firebase_auth: ^4.15.3
+  firebase_core: ^2.14.0
+  firebase_storage:
+  firebase_messaging:
+  google_sign_in: ^6.1.4
+  cloud_firestore:
+  provider:
+  flutter_launcher_icons: "^0.13.1"
 
 dev_dependencies:
   flutter_test:
